--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           </div>
         </header>
         <div class="caja-titulo">
-          <h1 class="titulo">Bienvenidos a mejor site</h1>
+          <h1 class="titulo">Bienvenidos a mi site</h1>
         </div>
         <div class="contenedor-imagen">
           <img
